src/objects/Committees__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_and_Minutes__c</fullName>
        <label>Agenda and Minutes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Committee_Role__c</fullName>
        <label>Committee Role</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constraints_Rules__c</fullName>
        <label>Constraints / Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_Date__c</fullName>
        <label>Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <label>Committees old</label>
    <nameField>
        <label>Committee&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>